samples/_failures_safe/1761006421_edf488_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_641ed257.c: In function ‘main’:
./samples/SAFE/__tmp_641ed257.c:168:9: error: expected declaration or statement at end of input
  168 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_641ed257.c:168:9: error: expected declaration or statement at end of input
